fixed unauthorized actions
